# r-project

rcli/: Cargo.toml  output.txt
rcli/.cargo/: config.toml
rcli/src/: lib.rs  main.rs  opts.rs  process.rs
rcli/src/cli/: base64.rs  csv.rs  mod.rs
rcli/src/process/: b64.rs  csv_convert.rs  gen_pass.rs
simple-redis/: Cargo.toml
simple-redis/src/: dredis.rs
