[package]
name = "rcli"
version = "0.1.0"
edition = "2021"

authors =["chuang mao"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.34", features = ["derive"] }


csv = "1.3.1"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"

structopt = "0.3.26"
zxcvbn = "3.1.0"

